# palethea-launcher

./: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  xaero_versions.json
.github/workflows/: build.yml
config/crash_assistant/: config.toml
docs/images/: README.md
local/crash_assistant/: 12608_1770908738960.info  12608_1770908738960_args.info  renderer_pid12608.tmp
src/: App.css  App.jsx  index.css  main.jsx
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/minecraft/: auth.rs  curseforge.rs  discord.rs  downloader.rs  fabric.rs  files.rs  forge.rs  instances.rs  java.rs  launcher.rs  logger.rs  mod.rs  modrinth.rs  ping.rs  secrets.rs  settings.rs  versions.rs
src/components/: AccountManagerModal.css  AccountManagerModal.jsx  AppErrorBoundary.jsx  Appearance.jsx  ConfirmModal.css  ConfirmModal.jsx  ContextMenu.css  ContextMenu.jsx  CreateInstance.css  CreateInstance.jsx  CustomColorPicker.css  CustomColorPicker.jsx  EditChoiceModal.css  FilterModal.css  FilterModal.jsx  IconPicker.css  IconPicker.jsx  InstalledContentRow.jsx  InstanceConsole.jsx  InstanceEditor.css  InstanceEditor.jsx  InstanceList.css  InstanceList.jsx  InstanceList.legacy.css  InstanceMods.jsx  InstanceMods_backup.jsx  InstanceResources.jsx  InstanceScreenshots.jsx  InstanceServers.jsx  InstanceSettings.jsx  InstanceWorlds.jsx  LoginPrompt.css  LoginPrompt.jsx  ModVersionModal.css  ModVersionModal.jsx  (+23 more)
(+7 files in other folders)
