[package]
name = "palethea-launcher"
version = "0.4.6"
description = "A Minecraft Launcher built with Tauri"
authors = ["Matt"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
zip = "2"
sha1 = "0.10"
dirs = "6"
fastnbt = "2"
base64 = "0.22"
flate2 = "1"
tar = "0.4"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
urlencoding = "2"
tauri-plugin-updater = "2.9.0"
tauri-plugin-process = "2.3.1"
chrono = { version = "0.4.43", features = ["serde"] }
tauri-plugin-opener = "2"
open = "5"
trust-dns-resolver = "0.23"
